feat: remove MCP protocol integration and add enhanced web search functionality
Major refactoring to remove Model Context Protocol (MCP) integration and replace with enhanced web search and document retrieval capabilities:

Breaking Changes:
- Remove all MCP protocol support and related code
- Remove mcp-cpp submodule dependency
- Remove MCP-related CMake options and build configurations

New Features:
- Add enhanced function registry with kolosal-server integration
- Add web search functions with SearXNG backend support
- Add document retrieval and semantic search capabilities
- Add hybrid knowledge system combining web search with local documents

Infrastructure Changes:
- Update CMakeLists.txt to remove MCP dependencies and add new tool sources
- Remove MCP adapter classes and server integration components
- Update agent core to support enhanced function registration
- Add new tool sources: kolosal_server_functions.cpp, enhanced_function_registry.cpp

Documentation Updates:
- Update README with new web search integration features
- Remove MCP integration documentation
- Add web search integration guide and examples
- Update architecture documentation to reflect new capabilities

Files Changed:
- Remove: mcp_agent_adapter.{hpp,cpp}, mcp_server_integration.{hpp,cpp}
- Remove: MCP_INTEGRATION.md, mcp_integration_example.cpp
- Remove: external/mcp-cpp submodule
- Update: CMakeLists.txt, agent_core.{hpp,cpp}, unified_server.{hpp,cpp}
- Add: Enhanced function registry and kolosal-server integration support

This change transitions the system from MCP protocol focus to comprehensive web search and knowledge retrieval capabilities.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "future": "cpp",
         "system_error": "cpp",
         "valarray": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "expected": "cpp"
     }
 }
